--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./style.css">
   <script src="https://kit.fontawesome.com/4abab7b0a9.js" crossorigin="anonymous"></script>
   <script src="./main.js"></script>
+  <title>Lucas Piedrahita - Frontend Dev</title>
 </head>
 
 <body>
@@ -94,7 +95,7 @@
     </div>
     <!-- START FOOTER SECTION -->
     <footer>
-      Lucas Piedrahita &copy; 2021
+      &copy; 2021 Lucas Piedrahita
     </footer>
     <!-- END FOOTER SECTION -->
   </main>
