add google analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <script src="https://kit.fontawesome.com/4abab7b0a9.js" crossorigin="anonymous"></script>
   <script src="./main.js"></script>
   <title>Lucas Piedrahita - Frontend Dev</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VG2Q44NVYV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VG2Q44NVYV');
+  </script>
 </head>
 
 <body>
